[package]
name = "epubsana"
version = "0.2.1"
edition = "2021"
description = "Repairs the EPUB defects epubveri detects — a pure-Rust, confirm-each-step EPUB fixer."
license = "AGPL-3.0-only OR LicenseRef-veripublica-Commercial"
repository = "https://github.com/veripublica/epubsana"
homepage = "https://github.com/veripublica/epubsana"
readme = "README.md"
keywords = ["epub", "epubcheck", "repair", "fix", "ebook"]
categories = ["command-line-utilities", "parser-implementations"]

# The WASM/JS boundary lives in a separate workspace member so its
# wasm-bindgen/serde/tsify deps never leak into this core crate (same pattern
# as epubveri-wasm). It reuses the core; it adds no repair logic of its own.
[workspace]
members = ["epubsana-wasm"]

[dependencies]
# The detector this repairs the output of — consumed from crates.io like any
# external user (dogfooding). The 0.5 line is the conventions-v0.4 one: five-value
# `Severity` (a fatal is no longer folded into an error) and the `rule`/`params`
# sub-codes epubsana's fixers dispatch on.
#
# The minimum is **0.5.3**, not 0.5: that is the release where the envelope types
# became generic over the two tool-owned slots (`Envelope::for_tool`, `Item::fix`),
# which `src/envelope.rs` builds on. Against 0.5.0–0.5.2 this crate does not
# compile, so the patch level is part of the requirement, not decoration.
#
# For local co-development of epubveri, add an uncommitted override:
#   [patch.crates-io] epubveri = { path = "../epubveri" }
epubveri = "0.5.3"
# Pure-Rust only (no C deps), same philosophy as epubveri: zip's "deflate"
# feature uses flate2 -> miniz_oxide (Rust); bzip2/zstd (C) stay disabled.
zip = { version = "2.2", default-features = false, features = ["deflate"] }
# Structural editing for content-model fixers: parse an XHTML document to find
# a node's exact byte range and edit it surgically (preserving everything
# else). Pure-Rust, and already epubveri's own XML parser — no new transitive
# weight, and byte ranges line up with the positions epubveri reports.
roxmltree = "0.20"
# `--format json`: the shared veripublica envelope (FORMATS.md). serde_json is
# the CLI's only user, but the envelope types are public so the wasm binding and
# any embedder emit the identical shape.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 2
